--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,37 @@
 {
-  "name": "frontend",
+  "name": "astracore-frontend",
   "version": "1.0.0",
+  "description": "Frontend pro AstraCore Solutions",
   "main": "index.js",
   "scripts": {
+    "start": "serve -s",
+    "build": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
+    "axios": "^1.1.3",
+    "chart.js": "^4.0.0",
+    "@mui/material": "^5.0.0",
+    "@mui/icons-material": "^5.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
+    "serve": "^14.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
+    "babel-loader": "^9.0.1",
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "description": ""
+  "license": "ISC"
 }
